--- a/src/components/LanguageModal/LanguageModal.module.scss
+++ b/src/components/LanguageModal/LanguageModal.module.scss
@@ -1,8 +1,9 @@
 .nav-item {
-  @apply flex items-center font-bold cursor-pointer text-blue-200;
+  @apply flex items-center font-bold cursor-pointer text-blue-200 transition-all ease-in-out duration-150
+  hover:text-purple-100;
 
   svg {
-    @apply ml-2 transition-all ease-in-out duration-300;
+    @apply ml-2 transition-all ease-in-out;
   }
 }
 
