--- a/src/components/VocabularyPage/components/TopBar/components/FilterWords/FilterWords.module.scss
+++ b/src/components/VocabularyPage/components/TopBar/components/FilterWords/FilterWords.module.scss
@@ -1,8 +1,9 @@
 .filters {
-  @apply flex items-center font-bold cursor-pointer text-blue-200;
+  @apply flex items-center font-bold cursor-pointer text-blue-200 transition-all ease-in-out duration-150
+  hover:text-purple-100 [&_svg]:hover:text-purple-100;
 
   svg {
-    @apply ml-2 transition-all ease-in-out duration-300;
+    @apply ml-2 transition-all ease-in-out;
   }
 }
 
