--- a/src/app/[locale]/dashboard/quiz/QuizPage.module.scss
+++ b/src/app/[locale]/dashboard/quiz/QuizPage.module.scss
@@ -31,8 +31,21 @@
       }
     }
 
-    .items {
-      @apply grid grid-cols-1 gap-4;
+    .level {
+      @apply mb-6
+      last:mb-0;
+
+      h2 {
+        @apply text-center text-xl font-bold text-blue-200 my-4
+        sm:text-2xl;
+      }
+      .topics {
+        @apply grid grid-cols-1 gap-4
+        sm:grid-cols-2
+        md:grid-cols-3
+        lg:grid-cols-2
+        xl:grid-cols-3;
+      }
     }
   }
 }
